[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tet"
version = "0.6a2"
description = "Unearthly intelligent batteries-included application framework built on Pyramid"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antti Haapala", email = "antti.haapala@anttipatterns.com"},
]
keywords = ["web", "wsgi", "bfg", "pylons", "pyramid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pyramid",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyramid>=1.9",
    "passlib",
    "sqlalchemy",
    "pyramid_di",
]

[project.optional-dependencies]
security = [
    "pyjwt",
    "pyotp",
    "qrcode>=8.0,<9.0",
    "requests>=2.28",
    "pyramid_tm",
    "zope.sqlalchemy",
]
dev = [
    "tet[security]",
    "pytest",
    "pytest-cov",
    "webtest",
    "structlog",
    "psycopg2-binary",
    "ruff",
    "mypy",
]
test = [
    "tet[security]",
    "pytest",
    "pytest-cov",
    "webtest",
    "structlog",
    "psycopg2-binary",
]

[project.urls]
Homepage = "http://www.anttipatterns.com"
Repository = "https://github.com/tetframework/tet"
Documentation = "https://tet.readthedocs.io"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["tet*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md", "*.ini", "*.cfg", "*.yml", "*.yaml", "*.json", "*.xml", "*.html", "*.css", "*.js", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.ico", "*.svg", "*.ttf", "*.woff", "*.woff2", "*.eot", "*.po", "*.pot", "*.mo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by the formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "C4"]

[tool.ruff.lint.isort]
known-third-party = ["pyramid", "sqlalchemy", "passlib", "pyramid_di"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.rstcheck]
report_level = "WARNING"
# Sphinx autodoc directives used in the auto-generated docs/api/*.rst stubs;
# rstcheck does not know extension directives, so ignore them.
ignore_directives = [
    "automodule",
    "autoclass",
    "autofunction",
    "autoattribute",
    "automethod",
    "autodata",
    "autoexception",
    "autosummary",
]
